--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
             </div>
         </header>
         <main>
-            <div class="d1">
-                <p>アンケートのご協力をお願いします。<br>おすすめカスタマイズ一覧を見て興味を持ったドリンクを第3位までランキングをつけてください。</p>
+            <div class="flex-4">
+                <div class="d1">
+                    <p>アンケートのご協力をお願いします。<br>卒業研究でスターバックスのおすすめカスタム一覧のサイトを作成しました。<br>卒業研究でアンケートの集計が必要なので興味を持った方、興味を持ったドリンクを3つ選んでください。</p>
+                </div>
             </div>
         </main>
         <footer>
-            <p>@2022</p>
+            <p>@2022卒業研究</p>
         </footer>
     </body>
 </html>
