--- a/custom1.html
+++ b/custom1.html
@@ -167,5 +167,8 @@
                 <iframe width="640px" height="480px" src="https://forms.office.com/Pages/ResponsePage.aspx?id=qWO15txntkauWBaZ2Ig18tgUaruqgHJNhh_v0ktkEGdUMzdBOEFQRk1OVVJHVlFFVEVDWU5YSlo5WS4u&embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
             </div>
         </main>
+        <footer>
+            <p>@2022卒業研究</p>
+        </footer>
     </body>
 </html>
