--- a/custom2.html
+++ b/custom2.html
@@ -99,5 +99,8 @@
                 </div>
             </div>
         </main>
+        <footer>
+            <p>@2022卒業研究</p>
+        </footer>
     </body>
 </html>
