--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
                 <div class="d1">
                     <p>アンケートのご協力をお願いします。<br>卒業研究でスターバックスのおすすめカスタム一覧のサイトを作成しました。<br>卒業研究でアンケートの集計が必要なので興味を持った方、興味を持ったドリンクを3つ選んでください。</p>
                 </div>
+                <div class="heading-1">
+                    <div class="center">
+                        <a href="custom1.html">おすすめカスタマイズ一覧に進む</a>
+                    </div>
+                </div>
             </div>
         </main>
         <footer>
