--- a/custom1.html
+++ b/custom1.html
@@ -2,18 +2,19 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="stylesheet.css">
+        <link rel="stylesheet" href="responsive.css">
         <title>卒業研究</title>
     </head>
     <body>
         <header>
-            <div class="pc">
+            <div class="pc-1">
                 <a href="custom2.html">無料有料カスタマイズ一覧</a>
                 <a href="index.html">トップページに戻る</a>
             </div>
         </header>
         <main>
             <div class="heading-1">
-                <div class="center">
+                <div class="center-1">
                     <h1>スタバのおすすめカスタマイズ一覧</h1>
                 </div>
             </div>
