--- a/custom2.html
+++ b/custom2.html
@@ -2,18 +2,19 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="stylesheet.css">
+        <link rel="stylesheet" href="responsive.css">
         <title>卒業研究</title>
     </head>
     <body>
         <header>
-            <div class="pc">
+            <div class="pc-2">
                 <a href="custom1.html">おすすめカスタマイズ一覧</a>
                 <a href="index.html">トップページに戻る</a>
             </div>
         </header>
         <main>
             <div class="flex-2">
-                <div class="center">
+                <div class="center-2">
                     <h1>無料カスタマイズ</h1>
                 </div>
                 <div class="heading-4">
@@ -50,7 +51,7 @@
                 </div>
             </div>
             <div class="flex-3">
-                <div class="center">
+                <div class="center-2">
                     <h1>有料カスタマイズ</h1>
                 </div>
                 <div class="heading-5">
@@ -88,7 +89,7 @@
             </div>
             <div class="flex-1">
                 <div class="flex-1">
-                    <div class="center">
+                    <div class="center-2">
                         <h1>コーヒーのサイズ</h1>
                     </div>
                     <div class="heading-3">
